--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -13,9 +13,10 @@
         {% endif %}
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-          
+        <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Proza+Libre&display=swap" rel="stylesheet">
     </head>
     <body>
+
         <div id="head">
             <a href="{% url 'tougcomsys:homepage' %}">
                 {% if tougcomsys.BANNER_IMAGE %}
