--- a/templates/tougcomsys/firsthome/homepage.html
+++ b/templates/tougcomsys/firsthome/homepage.html
@@ -28,8 +28,10 @@
                                     </div>
 
                                     <div class="list_textfields">
-                                        <div class="headline">
-                                            <h3>{{ articleplacement.article.headline|safe }}</h3>
+                                        <div class="headline">   
+                                            <a href="{% url 'tougcomsys:article' slug=articleplacement.article.slug %}">                                          
+                                                <h3>{{ articleplacement.article.headline|safe }}</h3>
+                                            </a>
                                         </div>
                                         <div class="subheadline">
                                             {{ articleplacement.article.subheadline|safe }}
@@ -40,19 +42,31 @@
                                     </div>
                                 </div>
 
-                            {% elif articleplacement.article.list_image.show_in_list == "xside" %}
-                                <div class="article article_image_{{ articleplacement.article.list_image.show_in_list }}">
-                                    <div class="list_image">
-                                        <img src="{{ articleplacement.article.list_image.image.url }}">
-                                    </div>
+                            {% elif articleplacement.article.list_images.top %}
 
+                                <div class="article article_image_top">
                                     <div class="list_textfields">
                                         <div class="headline">
-                                            <h3>{{ articleplacement.article.headline|safe }}</h3>
+                                            <a href="{% url 'tougcomsys:article' articleplacement.article.slug %}">                                          
+                                                <h3>{{ articleplacement.article.headline|safe }}</h3>
+                                            </a>
                                         </div>
                                         <div class="subheadline">
                                             {{ articleplacement.article.subheadline|safe }}
                                         </div>
+                                    </div>
+
+                                    <div class="list_images">
+                                        {% for list_image in articleplacement.article.list_images.top %}
+                                            <div class="list_image">
+                                                <a href="{{ list_image.list_image_link }}">
+                                                    <img src="{{ list_image.image.url }}">
+                                                </a>
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+
+                                    <div class="list_textfields">
                                         <div class="summary">
                                             {{ articleplacement.article.summary|safe }}
                                         </div>
@@ -61,15 +75,14 @@
 
                             {% elif articleplacement.article.list_image.show_in_list == image_positions.belowcontent %}
 
-                                <div class="article article_image_{{ articleplacement.article.list_image.show_in_list }}">
-                                    <div class="list_image">
-                                        <img src="{{ articleplacement.article.list_image.image.url }}">
-                                    </div>
-
+                                <div class="article article_image_bottom">
                                     <div class="list_textfields">
-                                        <div class="headline">
-                                            <h3>{{ articleplacement.article.headline|safe }}</h3>
+                                        <div class="headline">    
+                                            <a href="{% url 'tougcomsys:article' articleplacement.article.slug %}">                                          
+                                                <h3>{{ articleplacement.article.headline|safe }}</h3>
+                                            </a>
                                         </div>
+
                                         <div class="subheadline">
                                             {{ articleplacement.article.subheadline|safe }}
                                         </div>
@@ -77,7 +90,39 @@
                                             {{ articleplacement.article.summary|safe }}
                                         </div>
                                     </div>
+                                    <div class="list_images">
+                                        {% for list_image in articleplacement.article.list_images.top %}
+                                            <div class="list_image">
+                                                <a href="{{ list_image.list_image_link }}">
+                                                    <img src="{{ list_image.image.url }}">
+                                                </a>
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+
                                 </div>
+
+                            {% else %}
+
+                                <div class="article">
+                                    <div class="list_textfields">
+                                        <div class="headline">    
+                                            <a href="{% url 'tougcomsys:article' articleplacement.article.slug %}">                                          
+                                                <h3>{{ articleplacement.article.headline|safe }}</h3>
+                                            </a>
+                                        </div>
+
+                                        <div class="subheadline">
+                                            {{ articleplacement.article.subheadline|safe }}
+                                        </div>
+                                        <div class="summary">
+                                            {{ articleplacement.article.summary|safe }}
+                                        </div>
+                                    </div>
+
+                                </div>
+
+
                             {% endif %}
 
                         {% endfor %}
@@ -85,6 +130,40 @@
                     </div>
 
                 {% elif placement.type == placement_types.eventlist %}}
+
+                    <div class="column column_{{ placement.column_width }}">
+                        {% if placement.show_title %}
+                            <h2>{{ placement.title }}</h2>
+                        {% endif %}
+
+                        {% for event_date, events in placement.events.items %}
+                            <div class="event_date">
+                                <h3 class="event_date">
+                                    {{ event_date }}
+                                </h3>
+                            </div>
+                            {% for event in events %}
+                                <div class="article">
+                                    <div class="list_textfields">
+                                        <div class="headline">    
+                                                <h3>tp236s745{{ event.headline|safe }}</h3>
+                                        </div>
+
+                                        <div class="subheadline">
+                                            {{ event.summary|safe }}
+                                        </div>
+                                        <div class="summary">
+                                            {{ articleplacement.article.summary|safe }}
+                                        </div>
+                                    </div>
+
+                                </div>
+                            {% endfor %}
+
+                        {% endfor %}
+
+                    </div>
+
                 {% endif %}
 
             {% endfor %}
